[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/custom-dialog.png" type="Texture" id=1]
[ext_resource path="res://examples/mouse-block-panel-container.tscn" type="PackedScene" id=2]
[ext_resource path="res://examples/mouse-block-panel-container.gd" type="Script" id=3]
[ext_resource path="res://examples/custom-dialog-2.gd" type="Script" id=4]

[node name="CustomDialog2" type="Node2D"]
script = ExtResource( 4 )

[node name="ResponseLabel" type="Label" parent="."]
margin_left = 219.0
margin_top = 51.0
margin_right = 419.0
margin_bottom = 91.0
rect_min_size = Vector2( 200, 40 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenDialogButton" type="Button" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 150.0
margin_bottom = 90.0
text = "Open Custom Dialog #2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseBlockPanelContainer" type="PanelContainer" parent="." instance=ExtResource( 2 )]
visible = false
self_modulate = Color( 0, 0, 0, 0.745098 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomDialog2" type="Node2D" parent="."]
visible = false

[node name="DialogBackground" type="Sprite" parent="CustomDialog2"]
position = Vector2( 341.75, 241.75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="QuestionLabel" type="Label" parent="CustomDialog2"]
margin_left = 257.75
margin_top = 201.75
margin_right = 436.75
margin_bottom = 232.75
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Do you like custom dialogs?"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="CustomDialog2"]
margin_left = 261.75
margin_top = 253.75
margin_right = 325.75
margin_bottom = 290.75
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="CustomDialog2"]
margin_left = 370.301
margin_top = 253.75
margin_right = 434.301
margin_bottom = 290.75
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="OpenDialogButton" to="." method="_on_OpenDialogButton_pressed"]
[connection signal="pressed" from="CustomDialog2/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="CustomDialog2/NoButton" to="." method="_on_NoButton_pressed"]
